--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <div id="text">
                     <div id="code">
                       <span class="say"> Happiest Birthday  </span><br>
-                      <span class="say">My Beautiful Kanxi💕 </span><br>             
+                      <span class="say">My Beautiful Madhu Uranw💕 </span><br>             
                       <span class="say">I'LL GIVE YOU</span><br>
                       <span class="say">ALL THE LOVE🥰</span><br>
                       <span class="say">THAT ONE CAN💕</span><br>
-                      <span class="say">Your Kanxa🥰! </span><br>
+                      <span class="say">Your Nabin Uranw🥰! </span><br>
                       <span class="say"><span class="space"></span></span> </font>
                           <br />
                           <br />
